fix(popup): add higher z-index to the popups to ensure they render over the canvas

--- a/assets/scss/partials/_advent-day-popup.scss
+++ b/assets/scss/partials/_advent-day-popup.scss
@@ -2,6 +2,7 @@
 	position:fixed;
 	top:50%;
 	left:50%;
+	z-index:1000;
 	width:380px;
 	margin-left:-190px;
 	padding:40px 20px 20px;
